# generate-music

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/gen_music/: __init__.py  cli.py  config.py  core.py  live.py  utils.py
tests/: test_cli.py  test_core.py
